--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,8 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Login to Docker
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build the client image to run the tests
         run: docker build -t cugureanu/client-test -f ./client/Dockerfile.dev ./client
       - name: Run the client image with the test command
@@ -24,6 +28,15 @@ jobs:
         run: docker build -t cugureanu/multi-server ./server
       - name: Build the prod. worker image
         run: docker build -t cugureanu/multi-worker ./worker
+
+      - name: Push the client image to Docker Hub
+        run: docker push cugureanu/multi-client
+      - name: Push the nginx image to Docker Hub
+        run: docker push cugureanu/multi-nginx
+      - name: Push the server image to Docker Hub
+        run: docker push cugureanu/multi-server
+      - name: Push the worker image to Docker Hub
+        run: docker push cugureanu/multi-worker
  
       # - name: Generate deployment package
       #   run: zip -r deploy.zip . -x '*.git*'
