--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,17 +38,17 @@ jobs:
       - name: Push the worker image to Docker Hub
         run: docker push cugureanu/multi-worker
  
-      # - name: Generate deployment package
-      #   run: zip -r deploy.zip . -x '*.git*'
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*'
  
-      # - name: Deploy to ElasticBeanstalk
-      #   uses: einaregilsson/beanstalk-deploy@v22
-      #   with:
-      #     aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
-      #     aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-      #     application_name: frontend
-      #     environment_name: Frontend-env
-      #     existing_bucket_name: elasticbeanstalk-eu-central-1-339713009960
-      #     region: eu-central-1
-      #     version_label: ${{ github.sha }}
-      #     deployment_package: deploy.zip
+      - name: Deploy to ElasticBeanstalk
+        uses: einaregilsson/beanstalk-deploy@v22
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
+          application_name: multi-docker
+          environment_name: Multi-docker-env
+          existing_bucket_name: elasticbeanstalk-eu-central-1-339713009960
+          region: eu-central-1
+          version_label: ${{ github.sha }}
+          deployment_package: deploy.zip
