--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
-    "express": "4.16.3",
-    "pg": "8.0.3",
+    "body-parser": "1.20.2",
+    "express": "4.19.2",
+    "pg": "8.12.0",
     "redis": "2.8.0",
     "cors": "2.8.4",
-    "nodemon": "1.18.3",
-    "body-parser": "*"
+    "nodemon": "1.18.3"
   },
   "scripts": {
     "start": "node index.js",
