added NODE_ENV to the server run command, to trigger the ssl option on the PG connection

--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "nodemon": "1.18.3"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon"
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon"
   }
 }
